Fixed vertical navbar to align left by default.

--- a/src/components/Nav/style.styl
+++ b/src/components/Nav/style.styl
@@ -17,6 +17,7 @@
 
     &.-vertical
         flex-direction: column
+        align-items: flex-start
 
     @extend .nav.-md
 
